fix(39): increase chart height to fit legend and prevent text overlap

--- a/frontend/src/app/features/revisao/components/reorganize-modal/reorganize-modal.component.scss
+++ b/frontend/src/app/features/revisao/components/reorganize-modal/reorganize-modal.component.scss
@@ -303,9 +303,10 @@
 
 /* Chart */
 .chart-container {
-  height: 350px;
+  height: 420px;
   width: 100%;
   margin-top: 1rem;
+  margin-bottom: 1.5rem;
   
   ::ng-deep {
     /* Make all texts in the chart white */
